# d1-graphics-tool

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  code-ql.yml  linux.yml  nightly.yml  windows-32.yml  windows.yml
languages/: lang_de_DE.ts  lang_en_US.ts  lang_es_ES.ts  lang_fr_FR.ts  lang_hu_HU.ts
resources/: D1GraphicsTool.qss  d1files.qrc  null.pal
resources/nix/: d1gt.desktop
source/: affixsliderwidget.cpp  affixsliderwidget.h  builderwidget.cpp  builderwidget.h  builderwidget.ui  celview.cpp  celview.h  celview.ui  checkgfxsetstaskdialog.cpp  checkgfxsetstaskdialog.cpp.ui  checkgfxsetstaskdialog.h  checkgfxsetstaskdialog.ui  checkgfxssetstaskdialog.cpp  comboboxwidget.cpp  comboboxwidget.h  config.cpp  config.h  cppcolumnchangedialog.cpp  cppcolumnchangedialog.h  cppcolumnchangedialog.ui  cppcolumnrenamedialog.cpp  cppcolumnrenamedialog.h  cppcolumnrenamedialog.ui  cppdataeditdialog.cpp  cppdataeditdialog.h  cppdataeditdialog.ui  cpprowchangedialog.cpp  cpprowchangedialog.h  cpprowchangedialog.ui  cppview.cpp  cppview.h  cppview.ui  cppviewentrywidget.cpp  cppviewentrywidget.h  cppviewentrywidget.ui  d1amp.cpp  d1amp.h  d1cel.cpp  d1cel.h  d1celframe.cpp  (+219 more)
source/dungeon/: all.h  automap.cpp  automap.h  cursor.cpp  cursor.h  defs.h  drlg_l1.cpp  drlg_l1.h  drlg_l2.cpp  drlg_l2.h  drlg_l3.cpp  drlg_l3.h  drlg_l4.cpp  drlg_l4.h  engine.cpp  engine.h  enums.h  gendung.cpp  gendung.h  interfac.cpp  interfac.h  inv.cpp  inv.h  items.cpp  items.h  lighting.cpp  lighting.h  misdat.cpp  misdat.h  missiles.cpp  missiles.h  monstdat.cpp  monstdat.h  monster.cpp  monster.h  objdat.cpp  objects.cpp  objects.h  pack.cpp  patchdat.cpp  (+20 more)
source/libsmacker/: smacker.cpp  smacker.h  smk_malloc.h
translations/: ts.qrc
